Added normalize.css and fonts to the project

--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
     <meta name="keywords" content="front-end, web-design, portfolio, Poland, Cracow, HTML, CSS, javaScript, jQuery">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/normalize.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Nunito:300|Righteous' rel='stylesheet' type='text/css'>
     <link  href="css/style.css" rel="stylesheet">
     <script src="js/jquery-2.1.4.js" type="text/javascript"></script>
     <script src="js/app.js" type="text/javascript"></script>
 </head>
 <body>
+
+<a><i class="fa fa-circle-o-notch fa-spin"></i> Settings</a>
+<i class="fa fa-camera-retro fa-2x fa-spin"></i>
+
+<h1>MARCIN</h1>
+<h1>Portfolio</h1>
+<h1>ABOUT</h1><h1>SKILLS</h1>
+
+
+<p>paragrafy na dole POKAZUJĄ jaki jesten Ten Tekst W różnych Zdarzeniach</p>
 
 </body>
 </html>
