--- a/index.html
+++ b/index.html
@@ -3,27 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <title>Marcin Maslanka || Portfolio</title>
+    <meta name="author" content="Marcin Maslanka">
     <meta name="description" content="My latest Portfolio website, where I want to show off my front-end development skills.">
     <meta name="keywords" content="front-end, web-design, portfolio, Poland, Cracow, HTML, CSS, javaScript, jQuery">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/normalize.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Nunito:300|Righteous' rel='stylesheet' type='text/css'>
     <link  href="css/style.css" rel="stylesheet">
     <script src="js/jquery-2.1.4.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/jquery.fullPage.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
 </head>
 <body>
+<nav class="main-nav">dsakdlsajdlnjdksa</nav>
+<div id="fullpage">
+    <div class="section container">
+        <div id="scene">
+            <div class="layer fp-section" id="bg" data-depth="0.00"></div>
+            <div class="layer fp-section" id="fg" data-depth="0.15"><div class="button">tutaj idzie caly badziew oprocz fixed menu</div></div>
+        </div>
+    </div>
 
-<a><i class="fa fa-circle-o-notch fa-spin"></i> Settings</a>
-<i class="fa fa-camera-retro fa-2x fa-spin"></i>
+    <div class="section">Some 2 section
+    <div class="pasek">
+        <p>tutaj przyciemnione</p>
+    </div>
+    </div>
 
-<h1>MARCIN</h1>
-<h1>Portfolio</h1>
-<h1>ABOUT</h1><h1>SKILLS</h1>
+    <div class="section">Some 3section</div>
+    <div class="section">
+        <div class="wrapper">
+        <div class="slide" id="slide1">
+            <div class="intro">
+                <h1>Ideal for small screens</h1>
+            </div>
+        </div>
 
+        <div class="slide" id="slide2">
+            <h1>This example uses responsiveWidth: 900</h1>
+        </div>
+        <div class="slide" id="slide1">
+            <div class="intro">
+                <h1>Ideal for small screens</h1>
+            </div>
+        </div>
 
-<p>paragrafy na dole POKAZUJĄ jaki jesten Ten Tekst W różnych Zdarzeniach</p>
-
+        <div class="slide" id="slide2">
+            <h1>This example uses responsiveWidth: 900</h1>
+        </div>
+        </div>
+    </div>
+    <div class="section">Auto height</div>
+</div>
+<script src="js/parallax.min.js"></script>
+<script>
+    var scene = document.getElementById('scene');
+    var parallax = new Parallax(scene);
+</script>
 </body>
 </html>
