--- a/index.html
+++ b/index.html
@@ -7,20 +7,26 @@
     <meta name="description" content="My latest Portfolio website, where I want to show off my front-end development skills.">
     <meta name="keywords" content="front-end, web-design, portfolio, Poland, Cracow, HTML, CSS, javaScript, jQuery">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Nunito:300|Righteous' rel='stylesheet' type='text/css'>
     <link  href="css/style.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
     <script src="js/jquery-2.1.4.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/jquery.fullPage.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
 </head>
 <body>
-<nav class="main-nav">dsakdlsajdlnjdksa</nav>
+<nav class="main-nav">
+    <div class=" main-nav-btn main-logo"><a href="#"><img src="assets/images/MMlogo.png"></a></div>
+    <div class="main-nav-btn"><a href="#"><i class="fa fa-user"></i><p>about</p></a></div>
+    <div class="main-nav-btn"><a href="#"><i class="fa fa-star-half-o"></i><p>skills</p></a></div>
+    <div class="main-nav-btn"><a href="#"><i class="fa fa-desktop"></i><p>portfolio</p></a></div>
+    <div class="main-nav-btn"><a href="#"><i class="fa fa-envelope"></i><p>contact</p></a></div>
+</nav>
 <div id="fullpage">
     <div class="section container">
         <div id="scene">
-            <div class="layer fp-section" id="bg" data-depth="0.00"></div>
-            <div class="layer fp-section" id="fg" data-depth="0.15"><div class="button">tutaj idzie caly badziew oprocz fixed menu</div></div>
+            <div class="layer fp-section fp-table" id="bg-hero" data-depth="0.00"></div>
+            <div class="layer fp-section fp-table" id="fg-hero" data-depth="0.15"><div class="button">tutaj idzie caly badziew oprocz fixed menu</div></div>
         </div>
     </div>
 
