7 added header with navigation and about section

--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
 <body>
 
     <!--<nav class="nav-bar">-->
-        <!--<div class="main-logo"><a></a></div>-->
+        <!--<div class="main-logo"><a href="#scene"><img src="assets/images/MMlogo.png"></a></div>-->
         <!--<ul class="menu">-->
-            <!--<li><a href="#">about</a></li>-->
-            <!--<li><a href="#">skills</a></li>-->
-            <!--<li><a href="#">portfolio</a></li>-->
-            <!--<li><a href="#">contact</a></li>-->
+            <!--<li><a href="#about"><i class="fa fa-user"></i>about</a></li>-->
+            <!--<li><a href="#skills"><i class="fa fa-star-half-o"></i>skills</a></li>-->
+            <!--<li><a href="#portfolio"><i class="fa fa-desktop"></i>portfolio</a></li>-->
+            <!--<li><a href="#contact"><i class="fa fa-envelope"></i>contact</a></li>-->
         <!--</ul>-->
     <!--</nav>-->
 
     <header id="scene">
-        <div class="layer parallax-bg" data-depth="0.0"></div>
-        <div class="layer main-header cl-effect-19" data-depth="0.05">
+        <div class="layer parallax-bg" data-depth="0"></div>
+        <div class="layer main-header" data-depth="0.15">
             <h1>hi, I am <span>Marcin</span></h1>
             <p>junior front-end developer</p>
+            <i class="fa fa-arrow-circle-down arrow-down"></i>
             <a href="#portfolio" class="portfolioBtn">portfolio</a>
         </div>
-        <div class="layer parallax-fg" data-depth="0.2"></div>
+        <div class="layer parallax-fg" data-depth="0.1"></div>
     </header>
-
 
 </body>
 </html>
