8 added skills section markup and styles

--- a/home.html
+++ b/home.html
@@ -18,10 +18,10 @@
     <nav class="nav-bar">
         <div class="main-logo"><a href="#top"><img src="assets/images/MMlogo.png"></a></div>
         <ul class="menu">
-            <li><a href="#about"><i class="fa fa-user"></i>about</a></li>
-            <li><a href="#skills"><i class="fa fa-star-half-o"></i>skills</a></li>
-            <li><a href="#portfolio"><i class="fa fa-desktop"></i>portfolio</a></li>
-            <li><a href="#contact"><i class="fa fa-envelope"></i>contact</a></li>
+            <li data-color="#3BC391"><a href="#about"><i class="fa fa-user"></i>about</a></li>
+            <li data-color="#2f79c3"><a href="#skills"><i class="fa fa-star-half-o"></i>skills</a></li>
+            <li data-color="#eb4549"><a href="#portfolio"><i class="fa fa-desktop"></i>portfolio</a></li>
+            <li data-color="#374047"><a href="#contact"><i class="fa fa-envelope"></i>contact</a></li>
         </ul>
     </nav>
 
@@ -38,7 +38,6 @@
 
     <section class="about" id="about">
         <div class="wrapper">
-
             <div class="about-content">
                 <h2>about</h2>
                 <div class="about-flex">
@@ -51,7 +50,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
         <div class="about-quote">
             <blockquote class="wrapper">
@@ -63,6 +61,74 @@
         </div>
     </section>
 
+    <section class="skills" id="skills">
+        <div class="wrapper">
+            <div class="skills-content">
+                <h2>skills</h2>
+            </div>
+            <div class="skills-flex">
+                <div class="skills-set">
+                    <div class="skills-headline">
+                        <i class="fa fa-battery-three-quarters"></i>
+                        <p>proficient in:</p>
+                    </div>
+                    <div class="skills-images">
+                        <img src="assets/images/html.png">
+                        <img src="assets/images/css.png">
+                        <img src="assets/images/rwd.png">
+                        <img src="assets/images/ps.png">
+                    </div>
+                </div>
+                <div class="skills-set">
+                    <div class="skills-headline">
+                        <i class="fa fa-battery-half"></i>
+                        <p>good at:</p>
+                    </div>
+                    <div class="skills-images">
+                        <img src="assets/images/sass.png">
+                        <img src="assets/images/jquery.png">
+                        <img src="assets/images/boostrap.png">
+                    </div>
+                </div>
+                <div class="skills-set">
+                    <div class="skills-headline">
+                        <i class="fa fa-battery-quarter"></i>
+                        <p>working on:</p>
+                    </div>
+                    <div class="skills-images">
+                        <img src="assets/images/javascript.png">
+                        <img src="assets/images/github.png">
+                        <img src="assets/images/gulp.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="skills-bar-future">
+            <div class="wrapper">
+                <div class="skills-future">
+                    <p><i class="fa fa-battery-0"></i><p>want to plug in first:</p>
+                    <img src="assets/images/angular.png">
+                    <img src="assets/images/php.png">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="portfolio" id="portfolio">
+        <div class="wrapper">
+            <div class="portfolio-flex">
+                <h2>portfolio</h2>
+            </div>
+        </div>
+    </section>
+
+    <section class="contact" id="contact">
+        <div class="wrapper">
+            <div class="contact-flex">
+                <h2>contact</h2>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
