9 added portfolio section with owl carousel in it

--- a/home.html
+++ b/home.html
@@ -10,7 +10,12 @@
     <link href='https://fonts.googleapis.com/css?family=Nunito:300|Righteous' rel='stylesheet' type='text/css'>
     <link  href="css/style.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
+    <!-- Owl stylesheets -->
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.theme.css">
+    <link rel="stylesheet" href="css/owl.transitions.css">
     <script src="js/jquery-2.1.4.js" type="text/javascript"></script>
+    <script src="js/owl.carousel.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
 </head>
 <body>
@@ -118,6 +123,105 @@
         <div class="wrapper">
             <div class="portfolio-flex">
                 <h2>portfolio</h2>
+
+                <div id="owl-example" class="owl-carousel">
+                    <div class="slide">
+                        <img src="assets/images/portfolio.jpg" class="image-portfolio-main">
+                        <div class="text-portfolio-main">
+                            <p>Since the very beginning of my <strong>front-end</strong> education, I put my new gained skills into <strong>practice</strong>. Despite all my projects were mothballed, I spent <strong>dozens of hours</strong> to understand these web technologies. Here, I want to <strong>show off</strong> a few of my latest projects and some information about them.</p>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <img src="assets/images/bhagaskara.png" class="image-portfolio-side">
+                        <div class="text-portfolio-side">
+                            <h3>Bhagaskara</h3>
+                            <p>This project was based on PSD template. I wrote whole markup and styles. Added as well some javaScript functionalities like sticky menu, sliders, tooltips and so on. Website works responsively on each device.</p>
+                            <ul class="portfolio-skills-list">
+                                <li>html5</li>
+                                <li>css3</li>
+                                <li>rwd</li>
+                                <li>photoshop</li>
+                                <li>sass</li>
+                                <li>javaScript</li>
+                                <li>jQuery</li>
+                                <li>git</li>
+                            </ul>
+                            <a href="http://maslankam92.github.io/Bhagarska/" class="seeBtn">look it up</a>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <img src="assets/images/sitOnChair.png" class="image-portfolio-side">
+                        <div class="text-portfolio-side">
+                            <h3>Sit On Chair</h3>
+                            <p>This project was based on PSD template as well. Beside of markup and styles, I plugged some js and jQury interactoins. Website is not responsive so far.</p>
+                            <ul class="portfolio-skills-list">
+                                <li>html5</li>
+                                <li>css3</li>
+                                <li>photoshop</li>
+                                <li>sass</li>
+                                <li>javaScript</li>
+                                <li>jQuery</li>
+                                <li>git</li>
+                            </ul>
+                            <a href="http://maslankam92.github.io/sitOnChair_workshop-/" class="seeBtn">look it up</a>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <img src="assets/images/portfolio.png" class="image-portfolio-side">
+                        <div class="text-portfolio-side">
+                            <h3>Portfolio</h3>
+                            <p>This is my old portfolio with fake projects in it. Coded just with HTML5 and CSS3. Using media queries, I made this website responsive. Designed by myself.</p>
+                            <ul class="portfolio-skills-list">
+                                <li>html5</li>
+                                <li>css3</li>
+                                <li>rwd</li>
+                                <li>photoshop</li>
+                                <li>git</li>
+                            </ul>
+                            <a href="http://maslankam92.github.io/portfolioMM/" class="seeBtn">look it up</a>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <img src="assets/images/fakeProject.png" class="image-portfolio-side">
+                        <div class="text-portfolio-side">
+                            <h3>Sample Project</h3>
+                            <p>This website was created on exercise purpose. I found template and started coding to practise markup and styles. Then I used flexbox along with media queries to make this page scalable.</p>
+                            <ul class="portfolio-skills-list">
+                                <li>html5</li>
+                                <li>css3</li>
+                                <li>rwd</li>
+                            </ul>
+                            <a href="http://maslankam92.github.io/fakeProject/" class="seeBtn">look it up</a>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <img src="assets/images/fakeProjectTwo.png" class="image-portfolio-side">
+                        <div class="text-portfolio-side">
+                            <h3>Sample Project 2</h3>
+                            <p>Another one project to put my skills into practice. Playing around just with HTML5 and CSS3, making myself more comfortable in these technologies.</p>
+                            <ul class="portfolio-skills-list">
+                                <li>html5</li>
+                                <li>css3</li>
+                                <li>rwd</li>
+                                <li>photoshop</li>
+                            </ul>
+                            <a href="http://maslankam92.github.io/fakeProjectTwo/" class="seeBtn">look it up</a>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <img src="assets/images/beenThere.png" class="image-portfolio-side">
+                        <div class="text-portfolio-side">
+                            <h3>Been There</h3>
+                            <p>It was my first project ever, written couple months ago, at the beginning of my front-end journey. It is not finished yet but I hope to come back and get this project done.</p>
+                            <ul class="portfolio-skills-list">
+                                <li>html5</li>
+                                <li>css3</li>
+                                <li>photoshop</li>
+                            </ul>
+                            <a href="http://maslankam92.github.io/beenThere/" class="seeBtn">look it up</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
