--- a/index.html
+++ b/index.html
@@ -10,32 +10,245 @@
     <link href='https://fonts.googleapis.com/css?family=Nunito:300|Righteous' rel='stylesheet' type='text/css'>
     <link  href="css/style.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
+    <!-- Owl stylesheets -->
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.theme.css">
+    <link rel="stylesheet" href="css/owl.transitions.css">
     <script src="js/jquery-2.1.4.js" type="text/javascript"></script>
-    <script src="js/parallax.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
 </head>
 <body>
 
-    <!--<nav class="nav-bar">-->
-        <!--<div class="main-logo"><a href="#scene"><img src="assets/images/MMlogo.png"></a></div>-->
-        <!--<ul class="menu">-->
-            <!--<li><a href="#about"><i class="fa fa-user"></i>about</a></li>-->
-            <!--<li><a href="#skills"><i class="fa fa-star-half-o"></i>skills</a></li>-->
-            <!--<li><a href="#portfolio"><i class="fa fa-desktop"></i>portfolio</a></li>-->
-            <!--<li><a href="#contact"><i class="fa fa-envelope"></i>contact</a></li>-->
-        <!--</ul>-->
-    <!--</nav>-->
+    <nav class="nav-bar">
+        <div class="main-logo"><a href="#top"><img src="assets/images/MMlogo.png"></a></div>
+        <ul class="menu">
+            <li data-color="#3BC391"><a href="#about"><i class="fa fa-user"></i>about</a></li>
+            <li data-color="#2f79c3"><a href="#skills"><i class="fa fa-star-half-o"></i>skills</a></li>
+            <li data-color="#eb4549"><a href="#portfolio"><i class="fa fa-desktop"></i>portfolio</a></li>
+            <li data-color="#374047"><a href="#contact"><i class="fa fa-envelope"></i>contact</a></li>
+        </ul>
+    </nav>
 
-    <header id="scene">
-        <div class="layer parallax-bg" data-depth="0"></div>
-        <div class="layer main-header" data-depth="0.15">
-            <h1>hi, I am <span>Marcin</span></h1>
-            <p>junior front-end developer</p>
-            <i class="fa fa-arrow-circle-down arrow-down"></i>
-            <a href="#portfolio" class="portfolioBtn">portfolio</a>
+    <header class="hero" id="top">
+        <div class="wrapper">
+            <div class="main-header">
+                <h1>hi, I am <span>Marcin</span></h1>
+                <p>junior front-end developer</p>
+                <a href="#about"><i class="fa fa-arrow-circle-down arrow-down"></i></a>
+                <a href="#portfolio" class="portfolioBtn">portfolio</a>
+            </div>
         </div>
-        <div class="layer parallax-fg" data-depth="0.1"></div>
     </header>
+
+    <section class="about" id="about">
+        <div class="wrapper">
+            <div class="about-content">
+                <h2>about</h2>
+                <div class="about-flex">
+                    <div class="about-image">
+                        <img src="assets/images/marcin.png" alt="Marcin Maslanka">
+                    </div>
+                    <div class="about-text">
+                        <p>My name is <strong>Marcin Maslanka</strong>. I've been learning front end development for 6 months, mostly - <strong>by myself</strong>. However, I took part in one month <strong>front-end bootcamp</strong> by Coder's Lab, where I was able to brush up my skills and <strong>gain knowledge</strong> about new technologies. I am a <strong>highly motivated</strong> quick learner and <strong>hard working</strong> person, who loves crafting beautiful websites.</p><br>
+                        <p>On a daily basis, I study <strong>Project Management</strong> on University of Economics in Cracow. Even in my free time I like watching and reading courses and tutorials on <strong>web development</strong>. When I am finally away from the keyboard, I am a <strong>sport lover</strong> (football, snowboard). I am a big fan of <strong>travelling</strong> as well and I like <strong>taking pictures</strong> by the way.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="about-quote">
+            <blockquote class="wrapper">
+                <p>
+                    <i class="fa fa-quote-left"></i>It's not how good you are. It's how good you want to be.<i class="fa fa-quote-right"></i>
+                </p>
+                <footer>Paul Arden</footer>
+            </blockquote>
+        </div>
+    </section>
+
+    <section class="skills" id="skills">
+        <div class="wrapper">
+            <div class="skills-content">
+                <h2>skills</h2>
+            </div>
+            <div class="skills-flex">
+                <div class="skills-set">
+                    <div class="skills-headline">
+                        <i class="fa fa-battery-three-quarters"></i>
+                        <p>proficient in:</p>
+                    </div>
+                    <div class="skills-images">
+                        <img src="assets/images/html.png">
+                        <img src="assets/images/css.png">
+                        <img src="assets/images/rwd.png">
+                        <img src="assets/images/ps.png">
+                    </div>
+                </div>
+                <div class="skills-set">
+                    <div class="skills-headline">
+                        <i class="fa fa-battery-half"></i>
+                        <p>good at:</p>
+                    </div>
+                    <div class="skills-images">
+                        <img src="assets/images/sass.png">
+                        <img src="assets/images/jquery.png">
+                        <img src="assets/images/boostrap.png">
+                    </div>
+                </div>
+                <div class="skills-set">
+                    <div class="skills-headline">
+                        <i class="fa fa-battery-quarter"></i>
+                        <p>working on:</p>
+                    </div>
+                    <div class="skills-images">
+                        <img src="assets/images/javascript.png">
+                        <img src="assets/images/github.png">
+                        <img src="assets/images/gulp.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="skills-bar-future">
+            <div class="wrapper">
+                <div class="skills-future">
+                    <p><i class="fa fa-battery-0"></i><p>want to plug in first:</p>
+                    <img src="assets/images/angular.png">
+                    <img src="assets/images/php.png">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="portfolio" id="portfolio">
+        <div class="wrapper">
+            <div class="portfolio-flex">
+                <h2>portfolio</h2>
+
+                <div id="owl-example" class="owl-carousel">
+                    <div class="slide">
+                        <img src="assets/images/portfolio.jpg" class="image-portfolio-main">
+                        <div class="text-portfolio-main">
+                            <p>Since the very beginning of my <strong>front-end</strong> education, I put my new gained skills into <strong>practice</strong>. Despite all my projects were mothballed, I spent <strong>dozens of hours</strong> to understand these web technologies. Here, I want to <strong>show off</strong> a few of my latest projects and some information about them.</p>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <img src="assets/images/bhagaskara.png" class="image-portfolio-side">
+                        <div class="text-portfolio-side">
+                            <h3>Bhagaskara</h3>
+                            <p>This project was based on PSD template. I wrote whole markup and styles. Added as well some javaScript functionalities like sticky menu, sliders, tooltips and so on. Website works responsively on each device.</p>
+                            <ul class="portfolio-skills-list">
+                                <li>html5</li>
+                                <li>css3</li>
+                                <li>rwd</li>
+                                <li>photoshop</li>
+                                <li>sass</li>
+                                <li>javaScript</li>
+                                <li>jQuery</li>
+                                <li>git</li>
+                            </ul>
+                            <a href="http://maslankam92.github.io/Bhagarska/" class="seeBtn">look it up</a>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <img src="assets/images/sitOnChair.png" class="image-portfolio-side">
+                        <div class="text-portfolio-side">
+                            <h3>Sit On Chair</h3>
+                            <p>This project was based on PSD template as well. Beside of markup and styles, I plugged some js and jQury interactoins. Website is not responsive so far.</p>
+                            <ul class="portfolio-skills-list">
+                                <li>html5</li>
+                                <li>css3</li>
+                                <li>photoshop</li>
+                                <li>sass</li>
+                                <li>javaScript</li>
+                                <li>jQuery</li>
+                                <li>git</li>
+                            </ul>
+                            <a href="http://maslankam92.github.io/sitOnChair_workshop-/" class="seeBtn">look it up</a>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <img src="assets/images/portfolio.png" class="image-portfolio-side">
+                        <div class="text-portfolio-side">
+                            <h3>Portfolio</h3>
+                            <p>This is my old portfolio with fake projects in it. Coded just with HTML5 and CSS3. Using media queries, I made this website responsive. Designed by myself.</p>
+                            <ul class="portfolio-skills-list">
+                                <li>html5</li>
+                                <li>css3</li>
+                                <li>rwd</li>
+                                <li>photoshop</li>
+                                <li>git</li>
+                            </ul>
+                            <a href="http://maslankam92.github.io/portfolioMM/" class="seeBtn">look it up</a>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <img src="assets/images/fakeProject.png" class="image-portfolio-side">
+                        <div class="text-portfolio-side">
+                            <h3>Sample Project</h3>
+                            <p>This website was created on exercise purpose. I found template and started coding to practise markup and styles. Then I used flexbox along with media queries to make this page scalable.</p>
+                            <ul class="portfolio-skills-list">
+                                <li>html5</li>
+                                <li>css3</li>
+                                <li>rwd</li>
+                            </ul>
+                            <a href="http://maslankam92.github.io/fakeProject/" class="seeBtn">look it up</a>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <img src="assets/images/fakeProjectTwo.png" class="image-portfolio-side">
+                        <div class="text-portfolio-side">
+                            <h3>Sample Project 2</h3>
+                            <p>Another one project to put my skills into practice. Playing around just with HTML5 and CSS3, making myself more comfortable in these technologies.</p>
+                            <ul class="portfolio-skills-list">
+                                <li>html5</li>
+                                <li>css3</li>
+                                <li>rwd</li>
+                                <li>photoshop</li>
+                            </ul>
+                            <a href="http://maslankam92.github.io/fakeProjectTwo/" class="seeBtn">look it up</a>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <img src="assets/images/beenThere.png" class="image-portfolio-side">
+                        <div class="text-portfolio-side">
+                            <h3>Been There</h3>
+                            <p>It was my first project ever, written couple months ago, at the beginning of my front-end journey. It is not finished yet but I hope to come back and get this project done.</p>
+                            <ul class="portfolio-skills-list">
+                                <li>html5</li>
+                                <li>css3</li>
+                                <li>photoshop</li>
+                            </ul>
+                            <a href="http://maslankam92.github.io/beenThere/" class="seeBtn">look it up</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="contact" id="contact">
+        <div class="wrapper">
+            <div class="contact-flex">
+                <h2>contact</h2>
+                <p class="contact-text">+48 600 549 333</p>
+                <ul class="social-icons-list">
+                    <li class="social-icon gmail"><a href="mailto:maslankam92@gmail.com"><i class="fa fa-envelope-square"></i></a></li>
+                    <li class="social-icon github"><a href="https://github.com/maslankam92"><i class="fa fa-github-square"></i></a></li>
+                    <li class="social-icon linkedin"><a href="https://pl.linkedin.com/in/maslankam92"><i class="fa fa-linkedin-square"></i></a></li>
+                    <li class="social-icon twitter"><a href="https://twitter.com/marcinmaly07"><i class="fa fa-twitter-square"></i></a></li>
+                </ul>
+                <p class="contact-text">Download resume</p>
+                <a href="assets/download/marcinMaslankaResumeENG.pdf" download="Marcin Maslanka Resume" class="download-resume"><i class="fa fa-file-pdf-o"></i>ENG</a>
+                <a href="assets/download/marcinMaslankaResumePL.pdf" download="Marcin Maslanka CV" class="download-resume"><i class="fa fa-file-pdf-o"></i>PL</a>
+            </div>
+        </div>
+        <div class="contact-bar">
+            <div class="wrapper">
+                <p>Crafted with <i class="fa fa-heart"></i> by Marcin Maslanka.</p>
+                <p>Cracow, 2015</p>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
